initiated work towards incorporating the Froala editor

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -64,11 +64,14 @@ h2 {
     &.about-item {
         min-height: 200px;
     }
-}
-    &.big-logo {
+}&.big-logo {
         margin: auto;
         padding: 5px;
         max-width: 100%;
         max-height: auto;
         width: auto\9;
-    }
+}
+
+.editor{
+    padding: 100px;
+}
