--- a/source/app/app.component.html
+++ b/source/app/app.component.html
@@ -17,6 +17,7 @@
             <ul class="nav navbar-nav">
                 <li [class.active]="isActive([''])"><a class="home" [routerLink]="['']">Home</a></li>
                 <li [class.active]="isActive(['about'])"><a class="about" [routerLink]="['about']">About</a></li>
+                <li [class.active]="isActive(['editor'])"><a class="editor" [routerLink]="['editor']">Editor</a></li>
             </ul>
         </div>
     </div>
