--- a/source/less/style.less
+++ b/source/less/style.less
@@ -75,3 +75,17 @@ h2 {
 .editor{
     padding: 100px;
 }
+
+.login-container {
+    max-width: 330px;
+    padding: 15px;
+    .form-login {
+        margin: 0 0 10px 20px;
+        .checkbox {
+            margin-bottom: 10px;
+        }
+        input {
+            margin-bottom: 10px;
+        }
+    }
+}
