--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -58,3 +58,16 @@ h2 {
 .editor {
   padding: 100px;
 }
+.login-container {
+  max-width: 330px;
+  padding: 15px;
+}
+.login-container .form-login {
+  margin: 0 0 10px 20px;
+}
+.login-container .form-login .checkbox {
+  margin-bottom: 10px;
+}
+.login-container .form-login input {
+  margin-bottom: 10px;
+}
