--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,10 +15,10 @@
       </div>
       <div class="collapse navbar-collapse" id="navbar">
           <ul class="nav navbar-nav">
-              <li [class.active]="isActive([''])"><a class="home" [routerLink]="['']">Home</a></li>
-              <li [class.active]="isActive(['about'])"><a class="about" [routerLink]="['about']">About</a></li>
+              <li [class.active]="isActive([''])"><a class="home" id="Home" [routerLink]="['']">Home</a></li>
+              <li [class.active]="isActive(['about'])"><a class="about" id= "About" [routerLink]="['about']">About</a></li>
               <!-- <li [class.active]="isActive(['editor'])"><a class="editor" [routerLink]="['editor']">Editor</a></li> -->
-              <li *ngIf="loggedIn === false" [class.active]="isActive(['login'])"><a class="login" [routerLink]="['login']">Log In</a></li>
+              <li *ngIf="loggedIn === false" [class.active]="isActive(['login'])"><a class="login" id="Login" [routerLink]="['login']">Log In</a></li>
           </ul>
       </div>
   </div>
