--- a/src/less/app.less
+++ b/src/less/app.less
@@ -11,6 +11,14 @@
         height: 100px;
         margin: -4px 0 0 0;
         padding: 0;
+    }&.navbar-default {
+      background-color: darkslategray;
+      a {
+         color: #E6D6CA;
+      }
+      .navbar-nav a {
+        color: #E6D6CA;
+      }
     }
 
     // Expand/collapse the navbar in mobile-friendly mode using pure CSS styling.
@@ -73,7 +81,32 @@ h2 {
 }
 
 .editor{
-    padding: 100px;
+    padding: 100px 10px;
+    form{
+      label {
+          font-size: 14px;
+          font-weight: bold;
+          display: block;
+          background-color: #eaeaea;
+          line-height: 1.4em;
+          padding: 5px 10px;
+      }
+      textarea {
+          &#input-description {
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+
+            width: 100%;
+          }
+      }
+    }
+    .tag-listing{
+      ul{
+        list-style-type: none;
+      }
+
+    }
 }
 
 .login-container {
